# dactl

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CodingStyle.md  LICENSE  Makefile.am  README.md  TODO.md  autogen.sh  bootstrap  codecov.yml  common.am  configure.ac  docker-compose.yml  meson.build  meson_options.txt
data/: Makefile.am  dcsg.gresource.xml  meson.build  org.opendcs.Dcs.appdata.xml.in  org.opendcs.Dcs.service.in  org.opendcs.Dcsg.desktop.in.in  org.opendcs.Dcsg.service.in
data/config/: Makefile.am  dcs-daq.xml  dcs.xml
data/glade/: Makefile.am  dcs.xml  dcsui.xml  meson.build
data/gsettings/: Makefile.am  meson.build  org.opendcs.dcs.control.loop.gschema.xml  org.opendcs.dcs.daq.device.gschema.xml  org.opendcs.dcs.gschema.xml.in  org.opendcs.dcs.log.backend.gschema.xml  org.opendcs.dcsg.gschema.xml  org.opendcs.dcsg.plugin.gschema.xml
data/icons/: convert.sh  meson.build
data/mime/: Makefile.am  dcs.xml
data/services/: Makefile.am
data/systemd/: Makefile.am  dcs-ctl.service.in  dcs-daq.service.in  dcs-log.service.in
data/ui/: application-menu.ui  application-toolbar.ui  application-view.ui  cld-palette.ui  csv-export-toolbar.ui  general-settings.ui  loader-toolbar.ui  log-settings.ui  menu.ui  plugin-settings.ui  settings-listbox.ui  settings-propertybox.ui  settings-sidebar.ui  settings-topbar.ui  settings-treeview.ui  sidebar.ui  toolbar.ui  topbar.ui  widget-settings-page.ui  widget-settings.ui
doc/: Makefile.am  Makefile.sphinx  TODO.md  meson.build
doc/api/: meson.build
doc/man/: Makefile.am
doc/md/: Makefile.am
doc/source/: conf.py  config.rst  meson.build  setup.rst
doc/uml/: Makefile.am  UML.md  dcs-activity.uml  dcs-class-factory.uml  dcs-class.uml  dcs-component.uml  dcs-object.c  dcs-sequence.uml  dcs-state.uml  dcs.uml
doc/xml/: Makefile.am  authors.xml  dcs-controld.xml  dcs-daqd.xml  dcs-logd.xml  dcs-publish.xml  dcs-reply.xml  dcs-request.xml  dcs-subcommands.xml  dcs-subscribe.xml  dcs-utility-common-options.xml  dcs-utility-common-synopsis.xml  dcs.xml  dcsg.xml  notes.xml  seealso.xml  transform-html.xsl.in  transform-md.xsl.in
examples/vala/: Makefile.am  aobox.vala  box.vala  channel-treeview.vala  chart-axis.vala  chart.vala  config-node.vala  dobox.vala  factory.vala  page.vala  pnid.vala  ref-linker.vala
src/: Makefile.am  meson.build
src/config/: dcs-config.c  dcs-config.h  dcs-config.vapi  meson.build
src/controllers/: Makefile.am  Makefile.controller
src/dcs/: Makefile.am  dcs-command-get.vala  dcs-command-help.vala  dcs-command-publish.vala  dcs-command-quit.vala  dcs-command-reply.vala  dcs-command-request.vala  dcs-command-set.vala  dcs-command-subscribe.vala  dcs-command.vala  dcs-main.vala  dcs-utils.vala
src/dcs-analyze/: Makefile.am  main.vala
src/dcs-control/: Makefile.am  dbus-service.vala  main.vala  rest-service.vala  router.vala  server.vala  zmq-client.vala  zmq-service.vala
src/dcs-daq/: Makefile.am  cmdline-config.vala  config.vala  config.vapi  dbus-service.vala  main.vala  rest-service.vala  router.vala  server.vala  zmq-service.vala
src/dcs-log/: Makefile.am  config.vala  main.vala  rest-service.vala  router.vala  server.vala  zmq-client.vala  zmq-service.vala
src/dcs-plugin/: setup.py
src/dcsg/: Makefile.am  dcsg-application-controller.vala  dcsg-application-menu.vala  dcsg-application-model.vala  dcsg-application-toolbar.vala  dcsg-application-view.vala  dcsg-application.vala  dcsg-cmdline-config.vala  dcsg-configuration-editor.vala  dcsg-configuration-toolbar.vala  dcsg-control-settings.vala  dcsg-controller.vala  dcsg-csv-export-toolbar.vala  dcsg-csv-export.vala  dcsg-dbus-service.vala  dcsg-general-settings.vala  dcsg-layout.vala  dcsg-loader-toolbar.vala  dcsg-loader.vala  dcsg-main.vala  dcsg-menu.vala  dcsg-model.vala  dcsg-plugin-settings.vala  dcsg-settings-data.vala  dcsg-settings-dialog.vala  dcsg-settings-listbox.vala  dcsg-settings-page.vala  dcsg-settings-sidebar.vala  dcsg-settings-toolbar.vala  dcsg-settings-topbar.vala  dcsg-settings-treeview.vala  dcsg-sidebar.vala  dcsg-toolbar.vala  dcsg-topbar.vala  dcsg-utility.vala  dcsg-ux-manager.vala  dcsg-widget-settings-page.vala  dcsg-window.vala  dcsg.gresource.xml  meson.build
src/devices/: Makefile.am
src/lib/: meson.build
src/libdcs-cli/: Makefile.am  dcs-cli-0.1.pc.in  dcs-cli-application.vala
src/libdcs-control/: Makefile.am  dcs-control-0.1.pc.in  dcs-control-controller.vala  dcs-control-factory.vala  dcs-control-loop-manager.vala  dcs-control-loop.vala
src/libdcs-core/: Makefile.am  dcs-abstract-buildable.vala  dcs-abstract-config.vala  dcs-abstract-container.vala  dcs-abstract-object.vala  dcs-application-config.vala  dcs-application-controller.vala  dcs-application-factory.vala  dcs-application-model.vala  dcs-application-view.vala  dcs-application.vala  dcs-base-config.vala  dcs-base-object.vala  dcs-build.vapi  dcs-buildable.vala  dcs-cld-adapter.vala  dcs-config-file.vala  dcs-config-node.vala  dcs-config-util.vala  dcs-config.vala  dcs-config.vapi  dcs-container.vala  dcs-controller.vala  dcs-core-0.1.pc.in  dcs-dataseries.vala  dcs-edge.vala  dcs-extendable.vala  dcs-factory.vala  dcs-graph.vala  dcs-legacy-config.vala  dcs-legacy-plugin.vala  dcs-message.vala  dcs-meta-config.vala  dcs-meta-factory.vala  dcs-model.vala  dcs-module-loader.vala  dcs-node.vala  dcs-object.vala  dcs-plugin-config.vala  dcs-plugin-extension.vala  (+11 more)
src/libdcs-daq/: Makefile.am  dcs-daq-0.1.pc.in  dcs-daq-channel.vala  dcs-daq-device-manager.vala  dcs-daq-device.vala  dcs-daq-factory.vala  dcs-daq-port.vala  dcs-daq-sensor.vala  dcs-daq-serial-port.vala  dcs-daq-signal.vala  dcs-daq-task.vala
src/libdcs-log/: Makefile.am  (+7 more)
tests/: Makefile.am  test-build.vapi  test-case.vala  test-dcs-config-node.vala  test-dcs-config.vala  test-dcs-container.vala  test-dcs-core.vala  test-dcs-dataseries.vala  test-dcs-edge.vala  test-dcs-factory.vala  test-dcs-graph.vala  test-dcs-message.vala  test-dcs-meta-factory.vala  test-dcs-node.vala  test-dcs-object.vala  test-dcs-point.vala  test-dcs-ref-linker.vala
(+432 files in other folders)
